fix(react): MonetaryAmount currency dropdown width on Safari (#37)

--- a/packages/concerto-ui-react/src/concertoForm.css
+++ b/packages/concerto-ui-react/src/concertoForm.css
@@ -29,7 +29,7 @@
 
 .monetaryAmount {
     display: grid;
-    grid-template-columns: auto 60px;
+    grid-template-columns: auto 80px;
     grid-column-gap: 5px;
 }
 
